--- a/_posts/2024-01-16-test.md
+++ b/_posts/2024-01-16-test.md
@@ -46,7 +46,7 @@ Most of this activity involved verticalization by such companies.  For example, 
 
 ![Economist](/assets/images/2024-01/economist.png)
 
-Perhaps most striking to me was that these 3rd party players were not just buying up their competitors - CVS buying Aetna (insurer/insurer), Cigna buying Express Scripts (insurer/PBM) - they were also going buying up healthcare providers.  In February 2023, Optum quietly [purchased](https://rockinst.org/blog/a-mid-year-update-on-2023-healthcare-trends/) Crystal Run Healthcare, a 400-person physician group in New York.  In April 2023, California-based Kaiser [acquired](https://www.forbes.com/sites/robertpearl/2023/05/31/what-kaisers-acquisition-of-geisinger-means-for-us-all/?sh=63d95c665796) Geisinger, a Pennslyvania-based health system.  While financial terms of these deals were not disclosed, Amazon completed its $3.9B [acquisition](https://www.forbes.com/sites/brucejapsen/2023/02/22/amazon-achieves-closing-of-one-medical-deal-officially-entering-doctor-clinic-business/?sh=28ba5b7f747b) of One Medical in February 2023, giving some insight into the magnitude and importance of some of these deals.
+Perhaps most striking to me was that these 3rd party players were not just buying up their competitors - CVS buying Aetna (insurer/insurer), Cigna buying Express Scripts (insurer/PBM) - they were also going buying up healthcare providers.  In February 2023, Optum quietly [purchased](https://rockinst.org/blog/a-mid-year-update-on-2023-healthcare-trends/) Crystal Run Healthcare, a 400-person physician group in New York.  In April 2023, California-based Kaiser [acquired](https://www.forbes.com/sites/robertpearl/2023/05/31/what-kaisers-acquisition-of-geisinger-means-for-us-all/?sh=63d95c665796) Geisinger, a Pennslyvania-based health system.  While financial terms of these deals were not disclosed, Amazon completed its $3.9B [acquisition](https://www.forbes.com/sites/brucejapsen/2023/02/22/amazon-achieves-closing-of-one-medical-deal-officially-entering-doctor-clinic-business/?sh=28ba5b7f747b) of One Medical in February 2023, giving some insight into the magnitude and importance of these transactions.
 
 This surely has to be a good thing for all healthcare stakeholders, right?
 
