--- a/_posts/2024-01-16-test.md
+++ b/_posts/2024-01-16-test.md
@@ -58,7 +58,7 @@ But will this hurt patients in the end?  The Economist suggests that there could
 
 #### The role of technology
 
-With such consolidation, I am a proponent that the right combination of market forces and emerging technologies can create more efficiencies.  One of the earliest benefits for technologies such as LLMs is the ability to summarize data quickly.  This is a big need in healthcare today, especially for clinical narratives captured in EHRs.  I would agree with Some organizations 
+With such consolidation, I am a proponent that the right combination of market forces and emerging technologies can create more efficiencies.  One of the earliest benefits for technologies such as LLMs is the ability to summarize data quickly.  This is a big need in healthcare today, especially for clinical narratives and structured patient data in EHRs.  I would agree with Some organizations 
 
 > 
 
