--- a/_posts/2024-01-16-test.md
+++ b/_posts/2024-01-16-test.md
@@ -38,7 +38,7 @@ So what gives?
 
 I am not a health economist, but I am reorienting myself to understand the economics and policies that shape today's healthcare system.  I am increasingly aware of the shortfalls encountered in fixing healthcare, and have tempered my expectations of what technology can/cannot do.  This comes from my own experiences as a patient, conversations with health providers, and as a technologist specialized in systems and data.
 
-#### 2023 was another big year for healthcare verticalization
+#### 2023 was another big year for "big health"
 
 2023 was a big year for the tech world (generative AI), but it was also a big year for healthcare consolidation.  A few months ago, the [Economist](https://www.economist.com/business/2023/10/08/who-profits-most-from-americas-baffling-health-care-system) provided some interesting analysis into the recent cost drivers of the US healthcare system, focusing on 3rd party brokers or "big health" (i.e., insurance, drug distributors, PBMs) vs. pharmaceutical companies and health systems.
 
@@ -46,7 +46,7 @@ Most of this activity involved verticalization by such companies.  For example, 
 
 ![Economist](/assets/images/2024-01/economist.png)
 
-Perhaps most striking to me was that these 3rd party players were not just buying up their competitors - CVS buying Aetna (insurer/insurer), Cigna buying Express Scripts (insurer/PBM) - they were also going buying up healthcare providers.  In February 2023, Optum quietly [purchased](https://rockinst.org/blog/a-mid-year-update-on-2023-healthcare-trends/) Crystal Run Healthcare, a 400-person physician group in New York.  In April 2023, California-based Kaiser [acquired](https://www.forbes.com/sites/robertpearl/2023/05/31/what-kaisers-acquisition-of-geisinger-means-for-us-all/?sh=63d95c665796) Geisinger, a Pennslyvania-based health system.  While financial terms of these deals were not disclosed, Amazon completed its $3.9B [acquisition](https://www.forbes.com/sites/brucejapsen/2023/02/22/amazon-achieves-closing-of-one-medical-deal-officially-entering-doctor-clinic-business/?sh=28ba5b7f747b) of One Medical in February 2023, giving some insight into the magnitude and importance of these transactions.
+Perhaps most striking was that these 3rd party players were not just buying up their competitors - CVS buying Aetna (insurer/insurer), Cigna buying Express Scripts (insurer/PBM) - they were also going buying up healthcare providers.  In February 2023, Optum quietly [purchased](https://rockinst.org/blog/a-mid-year-update-on-2023-healthcare-trends/) Crystal Run Healthcare, a 400-person physician group in New York.  In April 2023, California-based Kaiser [acquired](https://www.forbes.com/sites/robertpearl/2023/05/31/what-kaisers-acquisition-of-geisinger-means-for-us-all/?sh=63d95c665796) Geisinger, a Pennslyvania-based health system.  While financial terms of these deals were not disclosed, Amazon's completion of its $3.9B [acquisition](https://www.forbes.com/sites/brucejapsen/2023/02/22/amazon-achieves-closing-of-one-medical-deal-officially-entering-doctor-clinic-business/?sh=28ba5b7f747b) of One Medical in February 2023 gives some insight into the magnitude and importance for these buyers.
 
 This surely has to be a good thing for all healthcare stakeholders, right?
 
@@ -58,7 +58,7 @@ But will this hurt patients in the end?  The Economist suggests that there could
 
 #### The role of technology
 
-With such consolidation, I am a proponent that the right combination of market forces and emerging technologies can create more efficiencies.  One of the earliest benefits for technologies such as LLMs is the ability to summarize data quickly.  This is a big need in healthcare today, especially for clinical narratives and structured patient data in EHRs.  I would agree with Some organizations 
+With such consolidation, I am a proponent that the right combination of market forces and emerging technologies can create more efficiencies.  One of the earliest benefits for technologies such as LLMs is the ability to summarize data quickly.  This is a big need in healthcare today, especially for clinical narratives and structured patient data in EHRs.  I agree with Dr. Robert Pearl's assessment 
 
 > 
 
