--- a/_posts/2024-01-16-test.md
+++ b/_posts/2024-01-16-test.md
@@ -58,9 +58,14 @@ But will this hurt patients in the end?  The Economist suggests that there could
 
 #### The role of technology
 
-With such consolidation, I am a proponent that the right combination of market forces and emerging technologies can create more efficiencies.  One of the earliest benefits I see in healthcare for the newest technologies such as LLMs is the ability to summarize data quickly.  This is a big need today, especially for clinical narratives and structured patient data in EHRs, as well as data captured across various systems (claims, labs, genetic tests, etc.).  But this is just one very small piece.  I agree with Dr. Robert Pearl's (former CEO of The Permanente Medical Group) [assessment](https://www.forbes.com/sites/robertpearl/2023/05/31/what-kaisers-acquisition-of-geisinger-means-for-us-all/?sh=63d95c665796) that the key to Kaiser Permanente's decades of success was due to a combination of innovative insurers and physicians.  I would put next-gen technologies in the innovation box, but it will fail on its own.
+With such consolidation, I am a proponent that the right combination of market forces and emerging technologies can create more efficiencies.  One of the earliest benefits I see for generative AI is the ability to summarize data quickly.  This can alleviate the administrative burden, especially for pulling together clinical narratives and structured patient data in EHRs, as well as handling workflows such as pre-authorizations.  In fact, these were the [top generative AI use cases](https://www.bain.com/insights/getting-the-most-out-of-generative-ai-in-healthcare/) per a Bain & Company report:
 
-However, I suspect that not every healthcare entity are or will ever become "big health".  Does thi What do weI suspect that only large healthcare entities will truly benefit 
+![Bain](/assets/images/2024-01/bain.png)
+
+
+But this is just one very small piece.  I agree with Dr. Robert Pearl's (former CEO of The Permanente Medical Group) [assessment](https://www.forbes.com/sites/robertpearl/2023/05/31/what-kaisers-acquisition-of-geisinger-means-for-us-all/?sh=63d95c665796) that the key to Kaiser Permanente's decades of success was due to a combination of innovative insurers and physicians.  I would put next-gen technologies in the innovation box, but it will fail on its own.
+
+However, I suspect that not every healthcare entity are or will ever become a "big health" entity.  The question remains as to whether these non-big health entities can still serve the majority of patients that consume the most health care services (55+).
 
 #### Conclusion
 
