--- a/_archive/_posts_backlog/2024-01-16-test2.md
+++ b/_archive/_posts_backlog/2024-01-16-test2.md
@@ -13,7 +13,11 @@ For 2024, I'm going to be switching up some of my posts to focus a bit more on t
 
 ## Poor health outcomes still plague the US
 
-According to the [Peterson Center-KFF Health System Tracker](https://www.healthsystemtracker.org/chart-collection/u-s-life-expectancy-compare-countries/#Life%20expectancy%20and%20per%20capita%20healthcare%20spending%20(PPP%20adjusted),%202022), in 2022, the US life expectancy at birth still lagged behind its peer countries:
+The current tech buzz reminds me of the time almost a decade ago when IBM Watson Health aimed to [transform healthcare](https://www.statnews.com/2021/03/10/ibm-watson-health-sale-lessons/), to much fanfare and eventual sell-off.
+
+For such a vision, have we actually made progress since that time?
+
+By "transform healthcare", I define this as improved health outcomes, longer life expectancy, and lowered costs.  According to the [Peterson Center-KFF Health System Tracker](https://www.healthsystemtracker.org/chart-collection/u-s-life-expectancy-compare-countries/#Life%20expectancy%20and%20per%20capita%20healthcare%20spending%20(PPP%20adjusted),%202022), in 2022, the US life expectancy at birth still lagged behind its peer countries:
 
 ![PC-KFF](/assets/images/2024-01/life-expectancy-at-birth-in-years-1980-2022.png)
 
@@ -60,11 +64,11 @@ With such consolidation, I am a proponent that the right combination of market f
 
 But this is just one very small piece.  I agree with Dr. Robert Pearl's (former CEO of The Permanente Medical Group) [assessment](https://www.forbes.com/sites/robertpearl/2023/05/31/what-kaisers-acquisition-of-geisinger-means-for-us-all/?sh=63d95c665796) that the key to Kaiser Permanente's decades of success was due to a combination of innovative insurers and physicians.  I would put next-gen technologies in the innovation box, but it will fail on its own.
 
-However, I suspect that not every healthcare provider group is or will ever become part of a "big health" entity.  The question still remains as to whether these non-big health entities can still serve the majority of patients that consume the most health care services (55+).
+However, I suspect that not every healthcare entity is or will ever become part of a "big health" entity.  The question still remains as to whether these non-big health entities can still serve the majority of patients that consume the most health care services (55+).
 
 ## Conclusion
 
-This research helped me better understand the external forces driving the ever-increasing costs of healthcare in the US.  While I focused on one particular angle of the broader issues facing the industry, it was quite eye-opening to see how the US fared against its peer countries in terms of health outcomes and spend.  In addition, I gained a better understanding of 
+This research helped me better understand the external forces driving the ever-increasing costs of healthcare in the US.  While I focused on one particular angle of the broader issues facing the industry, it was quite eye-opening to see how the US fared against its peer countries in terms of health outcomes and spend.  In addition, 
 
 I did not spend as much time evaluating technological innovations in other developed countries, but I plan to look at this in a future post.  
 
