--- a/_posts/2024-01-16-test.md
+++ b/_posts/2024-01-16-test.md
@@ -29,7 +29,7 @@ I am not a health economist, but I am reorienting myself to understand the econo
 
 ## 2023 was a big year for "big health"
 
-2023 was a big year for the tech world, but it was also a big year for healthcare consolidation.  A few months ago, the [Economist](https://www.economist.com/business/2023/10/08/who-profits-most-from-americas-baffling-health-care-system) provided some interesting analysis into the recent cost drivers of the US healthcare system, focusing on 3rd party brokers or "big health" (i.e., insurance, drug distributors, PBMs) vs. pharmaceutical companies and health systems.
+Not only was 2023 a big year in tech, it was also a big year for healthcare consolidation.  A few months ago, the [Economist](https://www.economist.com/business/2023/10/08/who-profits-most-from-americas-baffling-health-care-system) provided some interesting analysis into the recent cost drivers of the US healthcare system, focusing on 3rd party brokers or "big health" (i.e., insurance, drug distributors, PBMs) vs. pharmaceutical companies and health systems.
 
 Most of this activity involved verticalization by such companies.  For example, over the last decade, there has been progressive M&A activity by big names such as CVS Health, Cigna, and UnitedHealth.  These transactions have amounted to over $300B across more than 130 deals:
 
@@ -39,11 +39,11 @@ Perhaps most striking was that these 3rd party players were not just buying up t
 
 This has to be a good thing for all healthcare stakeholders, right?
 
-Industry executives think so, with the idea that verticalization will bring all important aspects of medical care - physicians, pharmacy, insurance, and IT systems - under one roof.  I certainly like that idea, as the current setup of running around between these entities is beyond frustrating for everyone involved.  This sentiment is supported by this [analysis](https://www.commonwealthfund.org/publications/issue-briefs/2023/oct/high-us-health-care-spending-where-is-it-all-going) by the Commonwealth Fund, where administrative costs account for 30% of excess US healthcare spend: 
+Industry executives think so, with the idea that verticalization will bring all important aspects of medical care - physicians, pharmacy, insurance, and IT systems - under one roof.  I certainly like that idea, as the current setup of running around between these entities is beyond frustrating for everyone involved.  This sentiment is supported by [analysis](https://www.commonwealthfund.org/publications/issue-briefs/2023/oct/high-us-health-care-spending-where-is-it-all-going) from the Commonwealth Fund, where administrative costs account for 30% of excess US healthcare spend: 
 
 ![Commonwealth](/assets/images/2024-01/high_us_health_care_spending_where_is_it_all_going_exhibit.png)
 
-But will this hurt patients in the end?  The Economist suggests that there could be unfair competition due to consolidation.  Quality of patient care may suffer.  All the while, these healthcare intermediaries have been producing excess returns greater than the S&P 500.  Much of this has not come to fruition yet, so it will be interesting to see if this strategy pays off.  
+But will this hurt patients in the end?  The Economist suggests that there could be unfair competition due to consolidation.  Quality of patient care may suffer.  All the while, these healthcare intermediaries have been producing excess returns greater than the S&P 500.  Much of this has not come to fruition yet, so it will be interesting to see if these strategies pay off.  
 
 ## The role of emerging technology
 
@@ -55,7 +55,7 @@ However, this is just one very small piece.  Dr. Robert Pearl, the former CEO of
 
 ## Conclusion
 
-This research helped me better understand the external forces driving the ever-increasing costs of healthcare in the US.  Despite the technoligical prowess of the US, the US still comes in last in terms of health outcomes and spend.  I suspect that if we continue to see more consolidations in the future, these tech innovations could have long-lasting effects that could improve health outcomes.  
+This research helped me better understand the external forces driving the ever-increasing costs of healthcare in the US.  Despite the technological prowess of the US, our country still comes in last in terms of health outcomes and spend.  I suspect that if we continue to see more consolidations in the future, these tech innovations could play a more important role in health outcomes.  
 
 I did not spend as much time evaluating tech innovations in other developed countries, but I plan to look at this in a future post.  
 
