--- a/_archive/_posts_backlog/2024-02-09-test.md
+++ b/_archive/_posts_backlog/2024-02-09-test.md
@@ -9,9 +9,14 @@ featured: false
 hidden: false
 ---
 
-For 2024, I'm going to be switching up some of my posts to focus a bit more on the healthcare industry and current trends.  2023 was a fun time exploring the newest toy in tech (generative AI), but it also came with its share of optimists and pessimists/realists when talking tech in healthcare.  I realized it warranted deeper inspection beyond the technology itself, which I will attempt to explore from various perspectives.
+Continuing on from my previous post on emerging tech's value in healthcare, I was intrigued to review EHR adoption across other countries.  This stems from the hypothesis that EHRs were sold on the promise of reducing administrative burden, thereby improving clinical care.  So why is this still such a sore point for clinical staff in the US?  Is emerging tech significant enough to alleviate this burden?
 
 ## Poor health outcomes still plague the US
+
+Its been a number of years since I was immersed in EHR dialogue in graduate school, but I remember being drawn to the promise of digitized health data to not only improve patient care, but to make secondary use of data available for clinical research.  But as I cited in a previous post, the efforts of the HITECH Act had produced an unintended effect 
+
+I picked a research paper from a few years ago (2020), that looked at EHR adoption in US ambulatory centers versus several other countries.  For this piece, I wanted to focus on the findings 
+
 
 According to the [Peterson Center-KFF Health System Tracker](https://www.healthsystemtracker.org/chart-collection/u-s-life-expectancy-compare-countries/), in 2022, the US life expectancy at birth still lagged behind its peer countries:
 
