--- a/_archive/_posts_backlog/2024-02-09-test.md
+++ b/_archive/_posts_backlog/2024-02-09-test.md
@@ -9,7 +9,7 @@ featured: false
 hidden: false
 ---
 
-Continuing on from my previous post on emerging tech's value in healthcare, I was intrigued to review EHR adoption across other countries.  While we should applaud the fact that [96% of hospitals](https://www.beckershospitalreview.com/ehrs/96-of-us-hospitals-have-ehrs-but-barriers-remain-to-interoperability-onc-says.html) have EHRs as of 2022, fulfilling [policies](https://www.healthcareitnews.com/news/10-years-meaningful-use-major-progress-despite-challenges) set forth by Presidents Bush (2004) and Obama (2009), many physicians are still [frustrated](https://www.kevinmd.com/2024/01/its-time-to-evolve-how-we-measure-the-success-of-ehrs-to-make-us-healthier.html) by them.  Although its been a number of years since I studied EHRs in an academic setting, I was intrigued by LLMs ability to mine the data in novel ways.  But is this emerging tech significant enough to make a meaningful impact, namely improving clinician well-being and health outcomes?
+Continuing on from my previous post on emerging tech's value in healthcare, I was intrigued to review EHR adoption across other countries.  While we should applaud the fact that [96% of hospitals](https://www.beckershospitalreview.com/ehrs/96-of-us-hospitals-have-ehrs-but-barriers-remain-to-interoperability-onc-says.html) have EHRs as of 2022, fulfilling [policies](https://www.healthcareitnews.com/news/10-years-meaningful-use-major-progress-despite-challenges) set forth by Presidents Bush (2004) and Obama (2009), many physicians are [frustrated](https://www.kevinmd.com/2024/01/its-time-to-evolve-how-we-measure-the-success-of-ehrs-to-make-us-healthier.html) by them.  Although its been a number of years since I studied EHRs in an academic setting, I was intrigued by LLMs ability to mine the data in novel ways.  But is this emerging tech significant enough to make a meaningful impact, namely improving clinician well-being and health outcomes?
 
 ## EHR use in the US vs. abroad
 A 2020 JAMA [report](https://jamanetwork.com/journals/jamainternalmedicine/fullarticle/2774129) set out to compare clinician usage of EHRs in the United States and in other countries.  The report studied EHR metadata of 371 health systems in the US and abroad.  I will focus on the paper's key findings and discussion, and its implications from a technology perspective.
