--- a/_posts/2024-02-09-test.md
+++ b/_posts/2024-02-09-test.md
@@ -31,7 +31,7 @@ Discussion:
 
 Its important to be wary of solutions looking for a problem.  In my experience, the next big tech idea in healthcare does not always fix problems.  Oftentimes, it introduces new ones.  There has to be a clear and compelling problem that technology can actually solve, and one with a demonstratable ROI.  
 
-The administrative burden of EHRs in the US is an area ripe for disruption.  The text summarization capabilites of LLMs make them a compelling solution for today's EHR woes.  I believe there is a fit in the clinician's workflow, but there are many other factors that will limit how much change this technology can achieve.  
+The administrative burden of EHRs in the US is an area ripe for disruption.  The text summarization capabilites of LLMs make them a compelling solution for today's EHR woes.  I believe there is a fit in the clinician's workflow, but there are many other factors that will limit the technology's impact.  For example, LLMs tendency to hallunicate should be of concern to clinicians and patients alike.  Yet, 
 
 In our healthcare system, there are significant government interventions and existing workflows that may limit the technology's potential. In fact, Meaningful Use has been criticized by phyisicans - https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7647027/#:~:text=The%20federal%20meaningful%20use%20%28MU%29%20program%20was%20aimed,of%20the%20MU%20program%20for%20practicing%20family%20physicians.
 
