--- a/_posts/2024-02-23-test.md
+++ b/_posts/2024-02-23-test.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Emerging tech's value in a time of healthcare verticalization"
+title:  "EHRs in the US: Can LLMs make a significant impact?"
 author: sandy
 categories: [ healthcare, EHR, AI ]
 image: assets/images/2024-01/shutterstock_170931503_license_resize.png
@@ -46,7 +46,7 @@ This paper was insightful to understand the differences in EHR adoption in the U
 ## References
 + <https://www.beckershospitalreview.com/ehrs/96-of-us-hospitals-have-ehrs-but-barriers-remain-to-interoperability-onc-says.html>
 + <https://www.healthcareitnews.com/news/10-years-meaningful-use-major-progress-despite-challenges>
-+ <https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7647027/>
++ <https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7647027>
 + <https://jamanetwork.com/journals/jamainternalmedicine/fullarticle/2774129>
 + <https://www.healthsystemtracker.org/chart-collection/quality-u-s-healthcare-system-compare-countries>
 + <https://www.ama-assn.org/practice-management/medicare-medicaid/meaningful-use-electronic-health-record-ehr-incentive>
