--- a/_posts/2024-02-23-test.md
+++ b/_posts/2024-02-23-test.md
@@ -3,13 +3,13 @@ layout: post
 title:  "EHRs in the US: Can LLMs make a significant impact?"
 author: sandy
 categories: [ healthcare, EHR, AI ]
-image: assets/images/2024-01/shutterstock_170931503_license_resize.png
+image: assets/images/2024-02/iStock-815517436.jpg
 description: "EHRs in the US: Can LLMs make a significant impact?"
 featured: false
 hidden: false
 ---
 
-Continuing on from my previous post on emerging tech's value in healthcare, I was intrigued to review eletronic health record (EHR) adoption in the US and across other countries.  While we should applaud the fact that [96% of US hospitals](https://www.beckershospitalreview.com/ehrs/96-of-us-hospitals-have-ehrs-but-barriers-remain-to-interoperability-onc-says.html) have EHRs as of 2022, fulfilling [policies](https://www.healthcareitnews.com/news/10-years-meaningful-use-major-progress-despite-challenges) set forth by Presidents Bush and Obama, many physicians are [frustrated](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7647027) by them.  Although its been a number of years since I studied EHRs in an academic setting, I was intrigued by LLMs ability to mine the data in novel ways.  But is this emerging tech significant enough to improve the provider-patient relationship?
+Continuing on from my previous post on emerging tech's value in healthcare, I was intrigued to review electronic health record (EHR) adoption in the US and across other countries.  While we should applaud the fact that [96% of US hospitals](https://www.beckershospitalreview.com/ehrs/96-of-us-hospitals-have-ehrs-but-barriers-remain-to-interoperability-onc-says.html) have EHRs as of 2022, fulfilling [policies](https://www.healthcareitnews.com/news/10-years-meaningful-use-major-progress-despite-challenges) set forth by Presidents Bush and Obama, many physicians are [frustrated](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7647027) by them.  Although its been a number of years since I studied EHRs in an academic setting, I was intrigued by LLMs ability to mine the data in novel ways.  But is this emerging tech significant enough to improve the provider-patient relationship?
 
 ## EHR use in the US vs. abroad
 A 2020 JAMA [report](https://jamanetwork.com/journals/jamainternalmedicine/fullarticle/2774129) set out to compare clinician usage of EHRs in the United States and in other countries.  The report studied EHR metadata of 371 health systems in the US and abroad.  I will focus on the paper's key findings and discussion, and its implications from a technology perspective.
