updated photo size

--- a/_posts/2024-02-23-test.md
+++ b/_posts/2024-02-23-test.md
@@ -3,7 +3,7 @@ layout: post
 title:  "EHRs in the US: Can LLMs make a significant impact?"
 author: sandy
 categories: [ healthcare, EHR, AI ]
-image: assets/images/2024-02/iStock-815517436.jpg
+image: assets/images/2024-02/iStock-815517436_resize.png
 description: "EHRs in the US: Can LLMs make a significant impact?"
 featured: false
 hidden: false
