--- a/_archive/_posts_backlog/2024-03-07-tbd.md
+++ b/_archive/_posts_backlog/2024-03-07-tbd.md
@@ -9,6 +9,9 @@ featured: false
 hidden: false
 ---
 
+There is no doubt that AI is making its way into the healthcare provider enivronment faster than I could imagine.  Another perspective I wanted to consider was the very nature of the healthcare system that is slow to change.  As described in this Forbes piece, Dr. 
+
+
 Continuing on from my previous post on emerging tech's value in healthcare, I was intrigued to review electronic health record (EHR) adoption in the US and across other countries.  While we should applaud the fact that [96% of US hospitals](https://www.beckershospitalreview.com/ehrs/96-of-us-hospitals-have-ehrs-but-barriers-remain-to-interoperability-onc-says.html) have EHRs as of 2022, fulfilling [policies](https://www.healthcareitnews.com/news/10-years-meaningful-use-major-progress-despite-challenges) set forth by Presidents Bush and Obama, many physicians are [frustrated](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7647027) by them.  Although it has been a number of years since I studied EHRs in an academic setting, I was impressed by LLMs ability to mine this data in novel ways.  But is this emerging tech significant enough to improve the patient-provider relationship?
 
 ## EHR use in the US vs. abroad
