--- a/_archive/_posts_backlog/2024-03-07-tbd.md
+++ b/_archive/_posts_backlog/2024-03-07-tbd.md
@@ -13,9 +13,14 @@ hidden: false
 
 
 ## Generative AI is having its moment in the clinic
-AI is nothing new, and I've noted in recent conversations that this wave seems reminiscent of IBM Watson's heyday.  Has anything changed since then?  To a degree, I would say yes.  This moment in AI is the "perfect storm".  Hospitals are looking for ways to rebound after the pandemic, digitized healthcare data is plentiful, and computing has become more powerful, cheap, and smart.  As noted by the authors in HBR's [Why the Tech Industry Won’t Disrupt Health Care](https://hbr.org/2024/02/why-the-tech-industry-wont-disrupt-health-care), healthcare organizations must transform themselves to stay relevant.  Failure to reduce costs, improve quality, and expand access will render them obsolete.
+AI is nothing new, and I've noted in recent conversations that this wave seems reminiscent of IBM Watson's heyday.  Has anything changed since then?  To a degree, I would say yes.  This moment in AI is the "perfect storm", as hospitals look to regain profitability post-pandemic, and computing has become more powerful, cheap, and smart.  As noted by the authors in HBR's [Why the Tech Industry Won’t Disrupt Health Care](https://hbr.org/2024/02/why-the-tech-industry-wont-disrupt-health-care), healthcare organizations must transform themselves to stay relevant.  Failure to reduce costs, improve quality, and expand access will render them obsolete.
 
-At a time where clinicians are facing more burnout due to regulatory requirements, an aging population, and hospitals margins running thin, it is only natural to think that technology could be a true disruptor this time around.  
+Adapting to new technologies is nothing new for healthcare.  As the HBR authors note
+
+Experience with transformation
+Although the industry may seem stodgy and set in its ways, health care providers have had to transform themselves with some regularity, and they’ve shifted to deal with changes in reimbursement, the need to adopt electronic health records, the Covid-19 pandemic, and the need to expand beyond medical care to address social determinants of health (access to food, healthy environments, public safety). They could be better at transforming themselves, but they are not new to the challenge.
+
+.  They've done well, At a time where clinicians are facing more burnout due to regulatory requirements, an aging population, and hospitals margins running thin, it is only natural to think that technology could be a true disruptor this time around.  
 
 
 ## Revolutionary vs. evolutionary technology
