--- a/_posts/2024-03-07-tbd.md
+++ b/_posts/2024-03-07-tbd.md
@@ -35,7 +35,7 @@ This made make me think a bit about what it would take for a technology to becom
 One of the challenges I see with revolutionary technology in healthcare is that it may not significantly impact the 5% that Dr. Blumenthal mentions.  This [population](https://www.healthsystemtracker.org/chart-collection/health-expenditures-vary-across-population) is likely to be older with more health complications.  If we're interested in reducing costs, its in this area that I think generative AI technology will face limitations and fall into the evolutionary category.  In contrast, the 95% of patients who have everyday health concerns will likely be revolutionized by generative AI technology.  However, it may not move the needle very far when it comes to cost.    
 
 ## Indicators of healthcare moving beyond evolutionary technology
-As Dr. Blumenthal notes, there needs to be effective systems (beyond technology) to care for the 5%.  If we want healthcare to transform as an industry, it is imperative to involve various stakeholders across the healthcare ecosystem.  Thus, I've been excited to learn of recent collaborations among private-public health entities over the last few months.  These include health systems, payers, technology companies, government bodies, and patients.  Recent collaborations include the Coalition for Health AI (CHAI), TRAIN, and SAIH.
+As Dr. Blumenthal notes, there needs to be effective systems (beyond technology) to care for the 5%.  If we want healthcare to transform as an industry, it is imperative to involve various stakeholders across the healthcare ecosystem.  Although there have been well-known [partnerships](https://newsnetwork.mayoclinic.org/discussion/mayo-clinic-selects-google-as-strategic-partner-for-health-care-innovation-cloud-computing/) between technology companies and health system Thus, I've been excited to learn of recent collaborations among private-public health entities over the last few months.  These include health systems, payers, technology companies, government bodies, and patients.  Recent collaborations include the Coalition for Health AI (CHAI), TRAIN, and SAIH.
 
 
 ## Conclusion
