--- a/_archive/_posts_backlog/2024-03-07-tbd.md
+++ b/_archive/_posts_backlog/2024-03-07-tbd.md
@@ -3,7 +3,7 @@ layout: post
 title:  "EHRs in the US: Can LLMs make a significant impact?"
 author: sandy
 categories: [ healthcare, EHR, AI ]
-image: assets/images/2024-02/iStock-815517436_license_resize.png
+image: assets/images/20240322Downloads/iStock-1025882206.jpg
 description: "Could healthcare be transformed by the AI revolution?"
 featured: false
 hidden: false
