--- a/_posts/2024-03-07-tbd.md
+++ b/_posts/2024-03-07-tbd.md
@@ -38,7 +38,7 @@ One of the challenges I see with revolutionary technology in healthcare is that 
 As Dr. Blumenthal notes, there needs to be effective systems (beyond technology) to care for the 5%.  If we want healthcare to transform as an industry, it is imperative to involve all stakeholders across the healthcare ecosystem.  Although there have been well-known [partnerships](https://newsnetwork.mayoclinic.org/discussion/mayo-clinic-selects-google-as-strategic-partner-for-health-care-innovation-cloud-computing) between technology companies and health system, new collaborations have sprung up among a diverse set of players.  These include health systems, payers, technology companies, government bodies, and patients.  Recent collaborations include the [Coalition for Health AI (CHAI)](https://www.coalitionforhealthai.org), [Trustworthy & Responsible AI Network (TRAIN)](https://news.microsoft.com/2024/03/11/new-consortium-of-healthcare-leaders-announces-formation-of-trustworthy-responsible-ai-network-train-making-safe-and-fair-ai-accessible-to-every-healthcare-organization), and [VALID AI](https://validai.health), among others.  It will be interesting to see how these collaborations shape up to address healthcare challenges with AI.
 
 ## Conclusion
-Its clear that AI in healthcare has been making significant headway in the last year, but it remains debatable if it can truly revolutionize the industry.  It was interesting to consider revolutionary technologies such as generative AI, in the context of the healthcare industry, which has managed well thus far with evolutionary technologies.  It will be interesting to see how these new set of partnerships will look to change healthcare for decades to come.
+Its clear that AI in healthcare has been making significant headway in the last year, but it remains debatable if it can truly revolutionize the industry.  It was interesting to consider revolutionary technologies such as generative AI, in the context of an industry which has managed well thus far with evolutionary technologies.  It will be interesting to see how these new set of partnerships will look to change healthcare for decades to come.
 
 ## References
 + <https://www.forbes.com/sites/sachinjain/2023/12/14/2024-healthcare-insiders-predict-the-future>
