--- a/_archive/_posts_backlog/2024-04-22-tbd.md
+++ b/_archive/_posts_backlog/2024-04-22-tbd.md
@@ -13,15 +13,13 @@ Some recent studies[] have made it into the media highlighting limitations of LL
 ## A primer on transformer models
 There is no shortage of resources to learn about transformer models such as GPT, and I will not go into the details here.  However, I found this [tutorial](https://towardsdatascience.com/illustrated-guide-to-transformers-step-by-step-explanation-f74876522bc0) particularly intuitive in understanding transformers, and it serves as a good backdrop for their application in healthcare. 
 
-At a high-level, transfomer models make use of the [attention mechanism](https://www.kdnuggets.com/2021/01/attention-mechanism-deep-learning-explained.html), which one can think of as a computer's ability to focus on specific parts of an input sequence to accomplish a specific ML task (e.g., predict an output word).  A specific type of mechanism, called [self-attention](https://arxiv.org/abs/1706.03762), enables a computer to [mathematically weigh](https://armanasq.github.io/nlp/self-attention/#:~:text=Self-attention%20enables%20models%20to%20weigh%20the%20importance%20of,when%20making%20predictions%20or%20capturing%20dependencies%20between%20words.) the importance (i.e., pay more attention to) between different words in a sequence.
+At a high-level, transfomer models make use of the [attention mechanism](https://www.kdnuggets.com/2021/01/attention-mechanism-deep-learning-explained.html), which one can think of as a computer's ability to focus on specific parts of an input sequence to accomplish a specific ML task (e.g., predict an output word).  A specific type of mechanism, called [self-attention](https://arxiv.org/abs/1706.03762), enables a computer to [mathematically weigh](https://armanasq.github.io/nlp/self-attention/#:~:text=Self-attention%20enables%20models%20to%20weigh%20the%20importance%20of,when%20making%20predictions%20or%20capturing%20dependencies%20between%20words.) the importance (i.e., pay more attention to) between different words in a sequence.  If you really want to nerd out on the mathematics behind the transformer attention mechanisms, I highly recommend this [tutorial](https://machinelearningmastery.com/the-transformer-attention-mechanism). 
 
-Here is a nice visual of how attention mechanism works and how it bests RNN and LTSM architectures:
+Here is a nice visual of how attention mechanism works and how it compares to RNN and LTSM architectures:
 
 [image]
 
-As shown above, this technique overcomes the limitation of previous NLP models such as LTSM and RNN, which struggled to process long input sentences.  The result of this technique is that a computer can retain meaning of longer sentences.
-
-*If you really want to nerd out on the mathematics behind the transformer attention mechanisms, I highly recommend this [tutorial](https://machinelearningmastery.com/the-transformer-attention-mechanism). 
+As shown above, this technique overcomes the limitation of previous NLP models such as LTSM and RNN, which ran into the problem of having short-term memory.  The result of this technique is that a computer can retain meaning of longer sentences. 
 
 
 ## Experiments using transformers in healthcare
@@ -39,3 +37,4 @@ In considering LLMs,
 + https://towardsdatascience.com/illustrated-guide-to-transformers-step-by-step-explanation-f74876522bc0
 + https://dzone.com/articles/a-deep-dive-into-the-transformer-architecture-the
 + <https://www.kdnuggets.com/2021/01/attention-mechanism-deep-learning-explained.html>
++ <https://machinelearningmastery.com/the-transformer-attention-mechanism)>
