--- a/_archive/_posts_backlog/2024-04-22-tbd.md
+++ b/_archive/_posts_backlog/2024-04-22-tbd.md
@@ -15,13 +15,13 @@ There is no shortage of resources to learn about transformer models such as BERT
 
 At a high-level, transfomer models make use of the [attention mechanism](https://www.kdnuggets.com/2021/01/attention-mechanism-deep-learning-explained.html), which one can think of as a computer's ability to focus on specific parts of an input sequence to accomplish a specific ML task (e.g., predict an output word).  A specific type of mechanism, called [self-attention](https://arxiv.org/abs/1706.03762), enables a computer to [mathematically weigh](https://armanasq.github.io/nlp/self-attention/#:~:text=Self-attention%20enables%20models%20to%20weigh%20the%20importance%20of,when%20making%20predictions%20or%20capturing%20dependencies%20between%20words.) the importance (i.e., pay more attention to) between different words in a sequence.
 
-Here is a nice visual of how attention mechanism works and how it compares to RNN and LTSM architectures:
+Here is a nice visual from the above-mentioned tutorial of how attention mechanism works and how it compares to LTSM and RNN architectures:
 
 ![AttentionMechanism](/assets/images/2024-04/atm.png)
 
-![RNN](/assets/images/2024-04/rnn.png)
-
 ![LSTM](/assets/images/2024-04/lstm.png)
+
+![RNN](/assets/images/2024-04/rnn.png)
 
 As shown above, this technique overcomes the limitation of previous NLP models such as LTSM and RNN, which ran into the problem of having short-term memory.  The result of this technique is that a computer can retain meaning of longer sentences. 
 
