--- a/_archive/_posts_backlog/2024-04-22-tbd.md
+++ b/_archive/_posts_backlog/2024-04-22-tbd.md
@@ -8,12 +8,12 @@ featured: false
 hidden: false
 ---
 
-Some recent studies[] have made it into the media highlighting limitations of LLMs, perhaps casting a shadow on the true potential of generative AI.  As I've written before, healthcare is arguably at an inflection point where innovation is needed, but in the right places.  As a business leader or technologist, I think its important to ask:  In what ways are these AI models superior to their predecessors?  What are the most applicable use cases?  In this post, I take a deeper look into healthcare applications using transfomer models, and evaluate their usefulness in healthcare.
+Some recent studies[] have made it into the media highlighting limitations of LLMs, perhaps casting a shadow on the true potential of generative AI.  As I've written before, healthcare is arguably at an inflection point where innovation is needed, but in the right places.  As a business leader or technologist, it is important to ask:  In what ways are these AI models superior to their predecessors?  What problem can this AI model actually solve?  In this post, I take a deeper look into the intuition behind transformer models, the healthcare applications where it is being used, and their feasability in healthcare.
 
 ## A primer on transformer models
-There is no shortage of resources to learn about transformers such as the Generative Pre-trained Transformer (GPT), and I will not go into the details here.  However, I found this [tutorial](https://towardsdatascience.com/illustrated-guide-to-transformers-step-by-step-explanation-f74876522bc0) fairly intuitive in understanding transformers, and it serves as a good backdrop for their application in healthcare.  Additional resources can be found in the reference section.
+There is no shortage of resources to learn about transformers such as the Generative Pre-trained Transformer (GPT), and I will not go into the details here.  However, I found this [tutorial](https://towardsdatascience.com/illustrated-guide-to-transformers-step-by-step-explanation-f74876522bc0) fairly intuitive in understanding transformers, and it serves as a good backdrop for their application in healthcare.  I have added additional resources in the reference section.
 
-At a high-level, transfomer models make use of the [attention mechanism](https://www.kdnuggets.com/2021/01/attention-mechanism-deep-learning-explained.html), which I like to think of as a computer's ability to focus on specific parts of an input sequence to accomplish a specific ML task (e.g., predict an output word).  A specific type of mechanism, called [self-attention](https://arxiv.org/abs/1706.03762), is a technique that [mathematically weighs](https://armanasq.github.io/nlp/self-attention) the importance (i.e., pays more attention to) between different words in an input sequence.  
+At a high-level, transfomer models make use of the [attention mechanism](https://www.kdnuggets.com/2021/01/attention-mechanism-deep-learning-explained.html), which I like to think of as a computer's ability to focus on specific parts of an input sequence to accomplish a specific ML task (e.g., predict an output word).  A specific type of mechanism, called [self-attention](https://arxiv.org/abs/1706.03762), is a technique that [mathematically weighs](https://armanasq.github.io/nlp/self-attention) the importance between different words in an input sequence.  
 
 https://sebastianraschka.com/blog/2023/self-attention-from-scratch.html
 https://machinelearningmastery.com/the-transformer-attention-mechanism/
